remove spacing that causes issues with aligning images
Images using the position: relative; property do not scale properly if padding and margins are used

--- a/_all/css/widgets.css
+++ b/_all/css/widgets.css
@@ -30,11 +30,11 @@
  */
 .filter > :first-child {
   background-color: transparent;
-  padding-top: 0.5rem;
+  padding-top: 0;
   padding-right: 0;
-  padding-bottom: 0.5rem;
+  padding-bottom: 0;
   padding-left: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
   position: relative;
 }
 .filter > :first-child > * {
